src/test/resources/valid/typecheck/Return_Nothing.vas
class Main is
    this() is
    end

    method nothing() is
        return
    end
end