src/test/resources/invalid/typecheck/While_Scopes.vas
class Main is
    this() is
        while true loop
            var a : Integer
        end
        a
    end
end